--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-oauth/google": "^0.13.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "@supabase/supabase-js": "^2.89.0",
     "autoprefixer": "^10.4.23",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
