--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://BestBuyMetalsDev01.github.io/bbm-kpi",
+  "homepage": "https://kpi.bbmemployee.com",
   "scripts": {
     "dev": "vite --force",
     "build": "vite build",
